--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,7 +24,7 @@ env:
 jobs:
   terraform:
    name: "Apply terraform code changes"
-   runs-on: ubuntu
+   runs-on: ubuntu-latest
    defaults:
     run:
      shell: bash
@@ -39,7 +39,7 @@ jobs:
 
     - name: Terrafrom init
       id: init
-      run: terraform init -backend-config="bucket=${{env.BUCKET_TF_STATE}}"
+      run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
 
     - name: Terraform format
       id: fmt
