--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,6 +36,9 @@ jobs:
 
     - name: setup terrafrom
       uses: hashicorp/setup-terraform@v2
+      with:
+         terraform_version: 1.6.3
+
 
     - name: Terrafrom init
       id: init
